--- a/src/assets/scss/views/write.scss
+++ b/src/assets/scss/views/write.scss
@@ -26,12 +26,9 @@
             right: 0;
             width: 100%;
             max-height: 11.3rem;
-            margin: 0;
-            padding: 0.7rem;
             background-color: $grey12;
             box-sizing: border-box;
             box-shadow: rgba(0,0,0,0.2) 0 0.25rem 0.75rem;
-            list-style: none;
             text-align: left;
    
             @media (min-width: $min-mini-width) {
@@ -41,25 +38,32 @@
             @media (min-width: $min-small-width) {
                width: 25rem;
             }
-   
-            > li {
-               font-size: 0.75rem;
-               @include clearfix;
-   
-               + li {
-                  margin-top: 0.5rem;
-               }
-   
-               > a {
-                  display: inline-block;
-                  vertical-align: middle;
-   
-                  @media (min-width: $min-mini-width) {
-                     max-width: calc(100% - 9rem);
-                     @include ellipsis;
+
+            ul {
+               margin: 0;
+               padding: 0.7rem;
+               list-style: none;
+
+               > li {
+                  font-size: 0.75rem;
+                  @include clearfix;
+      
+                  + li {
+                     margin-top: 0.5rem;
+                  }
+      
+                  > a {
+                     display: inline-block;
+                     vertical-align: middle;
+      
+                     @media (min-width: $min-mini-width) {
+                        max-width: calc(100% - 9rem);
+                        @include ellipsis;
+                     }
                   }
                }
             }
+   
    
             &__delete {
                display: inline-flex;
