--- a/src/assets/scss/views/blog-config.scss
+++ b/src/assets/scss/views/blog-config.scss
@@ -26,12 +26,9 @@
             right: 0;
             width: 100%;
             max-height: 11.3rem;
-            margin: 0;
-            padding: 0.7rem;
             background-color: $grey12;
             box-sizing: border-box;
             box-shadow: rgba(0,0,0,0.2) 0 0.25rem 0.75rem;
-            list-style: none;
             text-align: left;
    
             @media (min-width: $min-mini-width) {
@@ -41,22 +38,28 @@
             @media (min-width: $min-small-width) {
                width: 25rem;
             }
-   
-            > li {
-               font-size: 0.75rem;
-               @include clearfix;
-   
-               + li {
-                  margin-top: 0.5rem;
-               }
-   
-               > a {
-                  display: inline-block;
-                  vertical-align: middle;
-   
-                  @media (min-width: $min-mini-width) {
-                     max-width: calc(100% - 9rem);
-                     @include ellipsis;
+
+            ul {
+               margin: 0;
+               padding: 0.7rem;
+               list-style: none;
+               
+               > li {
+                  font-size: 0.75rem;
+                  @include clearfix;
+      
+                  + li {
+                     margin-top: 0.5rem;
+                  }
+      
+                  > a {
+                     display: inline-block;
+                     vertical-align: middle;
+      
+                     @media (min-width: $min-mini-width) {
+                        max-width: calc(100% - 9rem);
+                        @include ellipsis;
+                     }
                   }
                }
             }
@@ -75,6 +78,28 @@
                font-size: 0.8rem;
                line-height: 1;
                text-shadow: none;
+            }
+
+            &__add {
+               min-width: 0;
+               width: 1.9rem;
+               height: 1.9rem;
+               padding: 0;
+               background-color: $main-color;
+               color: $grey12;
+               font-size: 1.2rem;
+            }
+
+            &__inputs {
+               display: flex;
+
+               .input-wrapper {
+                  width: calc(100% - 1.9rem);
+               }
+            }
+
+            &__nm {
+               width: 100%;
             }
    
             &__date {
