--- a/src/assets/scss/components/post-reply-list.scss
+++ b/src/assets/scss/components/post-reply-list.scss
@@ -308,6 +308,7 @@
           font-weight: 700;
           font-size: 0.7rem;
           color: $grey12;
+          text-shadow: 1px 1px 0.1em rgba(0,0,0,0.8);
           justify-content: center;
           align-items: center;
         }
