--- a/src/assets/scss/views/guestbook.scss
+++ b/src/assets/scss/views/guestbook.scss
@@ -299,10 +299,10 @@
             content: "N";
             display: flex;
             position: absolute;
-            top: 0.1rem;
-            left: 0.1rem;
-            width: 20px;
-            height: 20px;
+            top: -1px;
+            left: -1px;
+            width: 1rem;
+            height: 1rem;
             border-radius: 50%;
             background-color: $main-color;
             font-weight: 700;
