--- a/src/assets/scss/views/guestbook.scss
+++ b/src/assets/scss/views/guestbook.scss
@@ -126,6 +126,16 @@
           width: auto;
         }
       }
+
+      &--cont-more {
+        min-width: 0;
+        margin-top: 0.5rem;
+        padding: 0;
+        box-shadow: none;
+        text-shadow: none;
+        font-size: 0.75rem;
+        color: $sub-color03;
+      }
       
       &--reply {
         &-open {
@@ -204,8 +214,14 @@
     }
   
     &__cont {
+      overflow: hidden;
+      max-height: 10.2rem;
       margin: 0;
       font-size: 0.85rem;
+
+      &.more {
+        max-height: none;
+      }
   
       &-edit {
         display: block;
